[workspace]
members = [
    "crates/common",
    "crates/gs-sim",
    "crates/vs",
    "crates/tools",
    "crates/client",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }

quinn = { version = "0.10.2", features = ["runtime-tokio", "tls-rustls", "ring"] }

# rustls, with "dangerous_configuration" so we can provide a custom cert verifier
rustls = { version = "0.21", features = ["dangerous_configuration"] }

bincode = "1.3"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
rcgen = "0.12"
thiserror = "2.0"
