[workspace]
members = [
    "crates/common",
    "crates/gs-sim",
    "crates/vs",
    "crates/tools",
    "crates/client-core",
    "crates/gs-core",
    "crates/client-bevy",
    "game",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.17.2", default-features = false }
anyhow = "1.0"
tokio = { version = "1.48", features = ["full"] }

quinn = { version = "0.11.9", features = ["runtime-tokio", "rustls-ring"] }

# rustls, with "dangerous_configuration" so we can provide a custom cert verifier
rustls = { version = "0.23.34", features = ["ring"] }
ctrlc = "3.5"
bincode = "1.3"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde-big-array = "0.5"
rcgen = "0.12"
thiserror = "2.0"
dashmap = "6"
once_cell = "1.19"