[package]
name = "game"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "game-gs"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = []
bin = ["tracing-subscriber"]

[dependencies]
gs-core = { path = "../crates/gs-core" }
common  = { path = "../crates/common" }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true, features = ["fmt", "env-filter"] }
