[package]
name = "client-bevy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sanity3d"
path = "src/main.rs"

[dependencies]
bevy         = { version = "0.17.2", default-features = true }
client-core = { path = "../client-core" }
tokio       = { workspace = true }
common      = { path = "../common" }

# Add dynamic_linking only for non-Windows builds
[target.'cfg(not(windows))'.dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
