[package]
name = "client-core"
version = "0.1.0"
edition.workspace = true

[lib]
name = "client_core"
path = "src/lib.rs"

[[bin]]
name = "client-sim"
path = "src/bin/client_sim.rs"

[dependencies]
anyhow         = { workspace = true }
clap           = { workspace = true }
tokio          = { workspace = true }
bincode        = { workspace = true }
ed25519-dalek  = { workspace = true }
common         = { path = "../common" }
rand           = { workspace = true }
hex            = { workspace = true }
