[package]
name = "client-sim"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
common = { path = "../common" }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
