[package]
name = "client-sim"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow         = { workspace = true }
clap           = { workspace = true }
tokio          = { workspace = true }
bincode        = { workspace = true }
ed25519-dalek  = { workspace = true }
common         = { path = "../common" }
rand           = { workspace = true }
hex            = { workspace = true }
