[package]
name = "common"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow           = { workspace = true }
thiserror        = { workspace = true }

tokio            = { workspace = true }
futures          = { workspace = true }
quinn            = { workspace = true }

serde            = { workspace = true }
serde-big-array  = { workspace = true }
bincode          = { workspace = true }

ed25519-dalek    = { workspace = true }
sha2             = { workspace = true }
rand             = { workspace = true }
hex              = { workspace = true }
