[package]
name = "gs-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
common = { path = "../common" }
