[package]
name = "gs-sim"
version = "0.1.0"
edition.workspace = true

[lib]
name = "gs_sim"
path = "src/lib.rs"

[[bin]]
name = "gs-sim"
path = "src/main.rs"

[dependencies]
anyhow        = { workspace = true }
thiserror     = { workspace = true }

tokio         = { workspace = true }
futures       = { workspace = true }
quinn         = { workspace = true }
rustls        = { workspace = true }

serde         = { workspace = true }
serde_json    = { workspace = true }
bincode       = { workspace = true }

ed25519-dalek = { workspace = true }
sha2          = { workspace = true }
rand          = { workspace = true }
hex           = { workspace = true }

clap          = { workspace = true }

common        = { path = "../common" }
