[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen_keys"
path = "src/gen_keys.rs"

[[bin]]
name = "smoke"
path = "src/smoke.rs"

[[bin]]
name = "play"
path = "src/play.rs"

[dependencies]
clap = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
ctrlc = { workspace = true }
anyhow = { workspace = true }